<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/version" />

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pixivillust_horizontal_margin"
            android:layout_marginTop="@dimen/pixivillust_vertical_margin"
            android:layout_marginRight="@dimen/pixivillust_horizontal_margin"
            android:layout_marginBottom="@dimen/pixivillust_vertical_margin"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/hello_contents" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="关于我"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            style="?buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_author"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/github_box"
                android:drawableLeft="@drawable/github_box"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/author_name"
                android:textAppearance="@style/TextAppearance.AppCompat" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>